--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "next": "12.2.2",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
+    "react-toastify": "^9.0.6",
     "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/node": "^18.0.5",
     "@types/react": "^18.0.15",
+    "@types/react-modal": "^3.13.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "typescript": "^4.7.4"
